Fixed quiz page spacing bug

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 .sidebar {
     background-color: bisque;
+    height: 100%;
 }
 
 .natural {
